--- a/style.css
+++ b/style.css
@@ -27,7 +27,11 @@ body
 }
 
 h1 {
+    a
     font-size: 8rem;
     text-transform:  uppercase;
     color: white;
+    display: grid;
+    text-align: center;
+    
 }
